--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,7 +62,7 @@ set(SOURCE_FILES main.cpp
         src/ui/interfaces/IText.h
         src/ui/physics/Influential.h
         src/ui/physics/InfluentialPUIO.h
-        src/ui/physics/ContactListener.h src/EventManager.h)
+        src/ui/physics/ContactListener.h src/EventManager.h src/ui/physics/ExitDoor.h src/ui/interfaces/IContactResponder.h src/ui/physics/Player.h)
 
 include_directories(src)
 include_directories(src/libs)
